# batched

./: ideas.md  mps.md  plan.md  pyproject.toml
examples/: async_three_jobs.py  basic_wrapper_usage.py  test.py
src/batched/: __init__.py  const.py  engine.py  gpt2.py  model.py  runtime.py  torch_varlen_attention.py  types.py  utils.py  worker.py  wrapper.py
