[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "batched"
version = "0.1.0"
description = "Batched intervention runtime"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "pydantic>=2.12.5",
    "torch>=2.7.0,<=2.10.0",
    "transformers>=5.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/batched"]

[tool.uv]
package = true
